--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html{
     font-size: 12pt;
     font-weight: 400;
     scroll-behavior: smooth;
+    user-select: none; 
 }
 .h2{
     font-size: 26px;
